k8s/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gawachabazaar-backend
  namespace: gawachabazaar
spec:
  replicas: 2
  selector:
    matchLabels:
      app: gawachabazaar-backend
  template:
    metadata:
      labels:
        app: gawachabazaar-backend
    spec:
      containers:
        - name: backend
          image: 544695387729.dkr.ecr.ap-south-1.amazonaws.com/gawachabazaar-backend:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8000
              protocol: TCP

          readinessProbe:
            httpGet:
              path: /health
              port: 8000
            initialDelaySeconds: 10
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 3

          livenessProbe:
            httpGet:
              path: /health
              port: 8000
            initialDelaySeconds: 20
            periodSeconds: 20
            timeoutSeconds: 5
            failureThreshold: 3

          resources:
            requests:
              cpu: 250m
              memory: 256Mi
            limits:
              cpu: "1"
              memory: 768Mi
