k8s/website-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gawachabazaar-website
  namespace: gawachabazaar
spec:
  replicas: 2
  selector:
    matchLabels:
      app: gawachabazaar-website
  template:
    metadata:
      labels:
        app: gawachabazaar-website
    spec:
      containers:
        - name: website
          image: 544695387729.dkr.ecr.ap-south-1.amazonaws.com/gawachabazaar-website:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 3000
              protocol: TCP

          readinessProbe:
            httpGet:
              path: /
              port: 3000
            initialDelaySeconds: 15
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 3

          livenessProbe:
            httpGet:
              path: /
              port: 3000
            initialDelaySeconds: 30
            periodSeconds: 20
            timeoutSeconds: 5
            failureThreshold: 3

          resources:
            requests:
              cpu: 200m
              memory: 256Mi
            limits:
              cpu: "1"
              memory: 768Mi
