k8s/website-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gawachabazaar-website
  namespace: gawachabazaar
spec:
  type: ClusterIP
  selector:
    app: gawachabazaar-website
  ports:
    - name: http
      port: 3000
      targetPort: 3000
      protocol: TCP
