k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gawachabazaar-ingress
  namespace: gawachabazaar
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP":80}]'
spec:
  ingressClassName: alb
  rules:
    - http:
        paths:
          - path: /api/v1
            pathType: Prefix
            backend:
              service:
                name: gawachabazaar-backend
                port:
                  number: 8000

          - path: /
            pathType: Prefix
            backend:
              service:
                name: gawachabazaar-website
                port:
                  number: 3000
